--- a/my.css
+++ b/my.css
@@ -5,7 +5,8 @@ body {
     margin: 0;
     padding: 0;
     line-height: 1.6;
-    background-color: #f4f4f4;
+    text-decoration-color: white;
+    background-color: blue;
 }
 
 header {
@@ -39,12 +40,13 @@ nav ul li a {
 section {
     padding: 2rem 0;
     //text-align: center;
+
 }
 
 section#about {
     background: #e2e2e2;
     text-align: none;
-
+    background-color: #010525;;
 }
 
 section#projects .project {
@@ -57,12 +59,12 @@ section#projects .project {
 }
 
 section#contact {
-    background: #e2e2e2;
+    background: #132888;
     text-align: center;
 }
 
 footer {
-    background: #333;
+    background: #6f62c6;
     color: #fff;
     text-align: center;
     padding: 1rem 0;
@@ -90,7 +92,7 @@ body {
 .navbar {
     display: flex;
     align-items: center;
-    background-color: #333;
+    background-color: #6f62c6;
 
 }
 
@@ -109,7 +111,8 @@ body {
 }
 
 .navbar a:hover {
-    background-color: #575757;
+    background-color: #a1c5f8;
+    border-radius: 20%;
 }
 
 .navbar .menu {
@@ -122,7 +125,7 @@ body {
 }
 
 .abouti {
-    color: black;
+    color: white;
 }
 
 .name {
@@ -259,9 +262,10 @@ body {
     margin: auto;
 }
 
-p {
+.ppp {
     font-weight: bold;
     margin: 10px 0;
+    color: white;
 }
 
 .container {
@@ -302,7 +306,7 @@ p {
 #projects {
     width: 100%;
     margin: auto;
-    background-color: #fff;
+    background-color: #051354;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -313,6 +317,7 @@ p {
     font-weight: bold;
     text-align: center;
     margin-bottom: 20px;
+    color: #ddd;
 }
 
 .pro {
@@ -327,12 +332,13 @@ p {
     border-radius: 8px;
     padding: 15px;
     width: calc(50% - 20px); /* Adjust width to ensure space for gap */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgb(60 184 225 / 90%);
     transition: transform 0.2s;
 }
 
 .project:hover {
     transform: scale(1.05);
+    background-color: #2196F3;
 }
 
 .project h3 {
@@ -348,7 +354,7 @@ p {
 .project a {
     display: inline-block;
     padding: 10px 15px;
-    background-color: #4CAF50;
+    background-color: #3969e3;
     color: white;
     text-decoration: none;
     border-radius: 4px;
@@ -400,5 +406,7 @@ p {
     margin: 0;
     color: #333;
 }
-
+.col{
+    color: white;
+}
 
