--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
-    <link rel="stylesheet" href="my.css">
+    <link rel="stylesheet" href="/css/my.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -33,10 +33,9 @@
                 <a href="#contact" class="si">Contact</a>
             </div>
             <div class="d-grid gap-2 d-md-block">
-                <button class="btn btn-primary" onclick="window.location.href='login.html'" id="login"
-                    type="button" class="si">LogIn</button>
-                <button class="btn btn-primary" onclick="window.location.href='login.html'" id="sign"
-                    type="button" >SignIn</button>
+                <button class="btn btn-primary" id="logoutButton"  
+                    type="button" class="si">Logout</button>
+                
             </div>
             <span class="menu-icon" onclick="toggleSidebar()">☰</span>
         </div>
@@ -60,9 +59,9 @@
     <section id="about">
         <div class="all">
 
-            <div class="myimag">
+            <div class="/images/myimag">
 
-                <img src="file.png" alt="">
+                <img src="/images/file.png" alt="">
             </div>
             <div class="other">
 
@@ -80,19 +79,19 @@
         <h2 class="diff">MY SKILLS</h2>
         <div class="skills-container">
             <div class="skill-box">
-                <img src="backhtml.png" alt="Skill 1 Image">
+                <img src="/images/backhtml.png" alt="Skill 1 Image">
                 <p>HTML</p>
             </div>
             <div class="skill-box">
-                <img src="css.png" alt="Skill 2 Image">
+                <img src="/images/css.png" alt="Skill 2 Image">
                 <p>CSS</p>
             </div>
             <div class="skill-box">
-                <img src="js_logo.png" alt="Skill 3 Image">
+                <img src="/images/js_logo.png" alt="Skill 3 Image">
                 <p>JavaScript</p>
             </div>
             <div class="skill-box">
-                <img src="gitlogo.png" alt="Skill 3 Image">
+                <img src="/images/gitlogo.png" alt="Skill 3 Image">
                 <p>Git</p>
             </div>
         </div>
@@ -120,7 +119,7 @@
         <div class="pro">
 
             <div class="project" class="card" style="width: 18rem;">
-                <img class="logoimg" src="Sarvam-Logo@4x.png" class="card-img-top" alt="...">
+                <img class="logoimg" src="/images/Sarvam-Logo@4x.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Sarvam</h5>
                     <p class="card-text">It was an effort to create a formers community using an user interface</p>
@@ -128,7 +127,7 @@
                 </div>
             </div>
             <div class="project" class="card" style="width: 18rem;">
-                <img class="logoimg" src="js_logo.png" class="card-img-top" alt="...">
+                <img class="logoimg" src="/images/js_logo.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Local storage</h5>
                     <p class="card-text">Small project on the local storage using JS local storage of web-browser</p>
@@ -171,7 +170,15 @@
                 sidebar.style.width = "0px";
             }
         }
-
+        
+    
+        
+    </script>
+    <script>
+        document.getElementById('logoutButton').addEventListener('click', () => {
+            // Redirect to the logout route
+            window.location.href = '/logout';
+        });
     </script>
 </body>
 
